--- a/package.json
+++ b/package.json
@@ -2,20 +2,32 @@
   "name": "tci",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon dist/index.js",
+    "test": "mocha --require ts-node/register source/tests/cars-api.spec.ts ",
+    "build": "rm -rf build/ && prettier --write source/ && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.1",
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
     "express": "^4.18.2",
-    "jest": "^29.7.0",
     "mocha": "^10.2.0",
-    "nodemon": "^3.0.1"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.10",
+    "@types/mocha": "^10.0.4"
   }
 }
